ci: test build push

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,12 +1,20 @@
-# Dockerfile
+# apps/backend/Dockerfile
 FROM node:20-alpine
+
+# Carpeta de trabajo dentro del contenedor
 WORKDIR /app
 
+# Instala dependencias (mejor caché)
 COPY package*.json ./
-RUN npm ci --omit=dev || npm install --omit=dev
+RUN npm ci --omit=dev
 
+# Copia el código
 COPY . .
-ENV PORT=3500
-EXPOSE 3500
 
-CMD ["npm","start"]
+# Configuración de ejecución
+ENV NODE_ENV=production
+ENV PORT=8080
+EXPOSE 8080
+
+# Arranque
+CMD ["npm", "start"]
