--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,21 +1,17 @@
 {
   "name": "mozart-backend",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.21.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "express": "^4.19.2"
+    "nodemon": "^3.0.1"
   }
 }
