--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,8 @@
     "@aws-sdk/client-chime-sdk-media-pipelines": "^3.883.0",
     "@aws-sdk/client-chime-sdk-meetings": "^3.883.0",
     "@aws-sdk/client-transcribe-streaming": "^3.883.0",
+    "@sendgrid/mail": "^8.1.5",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
