--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -10,9 +10,10 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  # Configúralas como Repository Variables (no secrets) cuando tengamos la infra del front:
-  S3_BUCKET: ${{ vars.S3_BUCKET }}     # ej: mozart-cemdi-front
-  CF_DIST_ID: ${{ vars.CF_DIST_ID }}   # ej: E3ABCDEF12345
+  # Usa repo variables si quieres, pero damos defaults de tu infra:
+  S3_BUCKET: ${{ vars.S3_BUCKET || 'mozart-cemdi-front' }}
+  CF_DIST_ID: ${{ vars.CF_DIST_ID || 'EXEHY85WOOA9D' }}
+  NODE_VERSION: '20'
 
 concurrency:
   group: front-${{ github.ref }}
@@ -30,24 +31,30 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          cache-dependency-path: apps/frontend/package-lock.json
 
-      - name: Install & Build
+      - name: Install
         working-directory: apps/frontend
-        run: |
-          npm ci
-          npm run build  # genera apps/frontend/dist
+        run: npm ci
 
-      - name: Configure AWS (OIDC - FRONT)
+      - name: Build (Vite)
+        working-directory: apps/frontend
+        env:
+          # Usa secret si lo creaste; si no, cambia aquí al ALB DNS o a tu dominio
+          VITE_API_URL: ${{ secrets.VITE_API_URL || 'http://mozart-cemdi-alb-244122280.us-east-1.elb.amazonaws.com' }}
+        run: npm run build
+
+      - name: Configure AWS (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ env.AWS_REGION }}
-          role-to-assume: ${{ secrets.AWS_ROLE_FRONT_ARN }}
+          # Si no tienes un rol específico para front, usa el mismo que backend:
+          role-to-assume: ${{ secrets.AWS_ROLE_FRONT_ARN || 'arn:aws:iam::534039229473:role/mozart-cemdi-gha-role' }}
 
       - name: Upload to S3
-        if: ${{ env.S3_BUCKET != '' }}
-        run: aws s3 sync ./apps/frontend/dist "s3://${{ env.S3_BUCKET }}" --delete
+        run: aws s3 sync apps/frontend/dist "s3://${{ env.S3_BUCKET }}" --delete
 
       - name: Invalidate CloudFront
-        if: ${{ env.CF_DIST_ID != '' }}
-        run: aws cloudfront create-invalidation --distribution-id $CF_DIST_ID --paths "/*"
+        run: aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/*"
