--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -10,10 +10,11 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  # Usa repo variables si quieres, pero damos defaults de tu infra:
+  # Defaults seguros; si tienes repo variables/secret, las puedes sobreescribir.
   S3_BUCKET: ${{ vars.S3_BUCKET || 'mozart-cemdi-front' }}
-  CF_DIST_ID: ${{ vars.CF_DIST_ID || 'EXEHY85WOOA9D' }}
+  CF_DIST_ID: ${{ vars.CF_DIST_ID || 'E35WF807SY6L8M' }}
   NODE_VERSION: '20'
+  API_URL: ${{ vars.API_URL || 'http://mozart-cemdi-alb-894060528.us-east-1.elb.amazonaws.com' }}
 
 concurrency:
   group: front-${{ github.ref }}
@@ -42,15 +43,14 @@ jobs:
       - name: Build (Vite)
         working-directory: apps/frontend
         env:
-          # Usa secret si lo creaste; si no, cambia aquí al ALB DNS o a tu dominio
-          VITE_API_URL: ${{ secrets.VITE_API_URL || 'http://mozart-cemdi-alb-244122280.us-east-1.elb.amazonaws.com' }}
+          # Prioriza secret si existe; si no, usa el ALB del env.
+          VITE_API_URL: ${{ secrets.VITE_API_URL || env.API_URL }}
         run: npm run build
 
       - name: Configure AWS (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ env.AWS_REGION }}
-          # Si no tienes un rol específico para front, usa el mismo que backend:
           role-to-assume: ${{ secrets.AWS_ROLE_FRONT_ARN || 'arn:aws:iam::534039229473:role/mozart-cemdi-gha-role' }}
 
       - name: Upload to S3
